Deploy: update with correct base path

--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>SimpleLightbox Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- SimpleLightbox CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.1/simple-lightbox.min.css"
+    />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <nav style="margin: 20px">
+      <a href="./2-form.html">📝 To pass to a feedback form</a>
+    </nav>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
+    <ul class="gallery"></ul>
 
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <!-- SimpleLightbox JS -->
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
