fix: исправлены ссылки в index.html и навигация

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <nav style="margin: 20px">
-      <a href="./2-form.html">📝 To pass to a feedback form</a>
+      <a href="./1-gallery.html">To gallery</a> |
+      <a href="./2-form.html">To pass to a feedback form</a>
     </nav>
 
     <ul class="gallery"></ul>
